compiler/testData/diagnostics/tests/when/testTask/ValueInsteadOfType.kt
fun foo(x: Number) = when (x) {
    is Double -> {}
    is <!SYNTAX!>0<!> -> {}
    else -> {}
}
